--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/env
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -8,6 +9,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+frontend/node_modules/cliui/build/
 build/
 develop-eggs/
 dist/
@@ -157,4 +159,6 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
+/frontend/node_modules/
+.DS_Store
