--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,5 +17,5 @@ RUN pip install -r requirements.txt
 
 COPY ./backend /app/
 
-ENTRYPOINT ["python"]
-CMD ["manage.py", "runserver", "0.0.0.0:8000"]
+
+CMD ["python","manage.py", "runserver", "0.0.0.0:8000"]
