--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 Django==4.2.5
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
+drf-writable-nested==0.7.0
 psycopg2-binary==2.9.8
 pytz==2023.3.post1
 sqlparse==0.4.4
