--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,18 @@
 asgiref==3.7.2
+coverage==7.3.1
 Django==4.2.5
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
 drf-writable-nested==0.7.0
+exceptiongroup==1.1.3
+iniconfig==2.0.0
+packaging==23.2
+pluggy==1.3.0
 psycopg2-binary==2.9.8
+pytest==7.4.2
+pytest-cov==4.1.0
+pytest-django==4.5.2
 pytz==2023.3.post1
 sqlparse==0.4.4
+tomli==2.0.1
 typing_extensions==4.8.0
